--- a/php-fpm/php72.ini
+++ b/php-fpm/php72.ini
@@ -863,6 +863,8 @@ default_socket_timeout = 60
 ; Dynamic Extensions ;
 ;;;;;;;;;;;;;;;;;;;;;;
 
+extension=zmq.so
+
 ; If you wish to have an extension loaded automatically, use the following
 ; syntax:
 ;
