--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -62,6 +62,12 @@ RUN apt-get update -yqq && \
 #
 
 ###########################################################################
+# ZeroMQ installation
+###########################################################################
+RUN apt-get update && \
+    apt-get install -y php-zmq
+
+###########################################################################
 # Set Timezone
 ###########################################################################
 
